--- a/schoolHogwarts/src/main/resources/application.properties
+++ b/schoolHogwarts/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.password= chocolatefrog
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 avatars.dir.path=/path/to/avatars
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
