--- a/schoolHogwarts/src/main/resources/application.properties
+++ b/schoolHogwarts/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 avatars.dir.path=/path/to/avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+logging.level.ru.hogwarts.school.service=DEBUG
+server.port=8080
 
